# to_the_point

./: .gitignore  LICENSE  README.md  codebase.py  pyproject.toml
.github/workflows/: tests.yml
examples/: attention_example.py  conv2d_example.py  linear_classifier.py  mlp_classifier.py
tests/: test_accuracy_benchmark.py  test_attention.py  test_conv2d.py  test_converter.py  test_cosine_similarity.py  test_datasets.py  test_embedding.py  test_linear.py  test_model.py  test_polynomial.py  test_utils.py
to_the_point/: __init__.py
to_the_point/layers/: __init__.py  attention.py  conv2d.py  embedding.py  linear.py  model.py  polynomial.py  recursive.py  template.py  unembed.py
to_the_point/utils/: __init__.py  converter.py
to_the_point/utils/datasets/: __init__.py  cifar10.py  cifar100.py  imagenet.py  mnist.py  squad.py  wikitext2.py
