[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "to_the_point"
version = "0.1.0"
description = "Analytical replacements for autograd layers: Linear, Conv2D, Attention, Polynomial, and more."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "torch>=1.10",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
datasets = [
    "torchvision",
]
dev = [
    "pytest",
    "torchvision",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "dataset: marks tests as dataset integration tests (deselect with '-m \"not dataset\"')",
]
